# common/models/Location/Address.ts
@@ -1,7 +1,0 @@
-export interface Address {
-    city: string,
-    state: string,
-    address: number,
-    zip: number,
-    street: string
-}
