# common/models/Location/Location.ts
@@ -1,8 +1,0 @@
-import { Coordinates } from "./Coordinates";
-import { Address } from "./Address";
-
-export interface Location {
-    address: Address,
-    coordinates: Coordinates,
-    region: string
-}
