# common/models/Stay.ts
@@ -1,22 +1,46 @@
 import { Entity } from "./Entity";
-import {Range} from "./Range";
+
+export interface Photo {
+    url: string,
+    priority: number,
+    description: string
+}
+
+export interface Address {
+    city: string,
+    state: string,
+    address: number,
+    zip: number,
+    street: string
+}
+
+export interface Coordinates {
+    latitude: number,
+    longitude: number
+}
+
+export interface Location {
+    address: Address,
+    coordinates: Coordinates,
+    region: string
+}
 
 export interface Stay {
     name: string;
+    enable: boolean;
     description: string;
-    city: string,
-    state: string,
-    region: string,
-    avgRate: Range;
-    capacity: Range;
+    location: Location;
+    currentRate: number;
+    averageRate: number;
+    capacity: number;
     bedrooms: number;
     petsAllowed: boolean;
     onSiteParking: boolean;
-    hostId: string;
+    hostEmail: string;
     type?: string[];
     perks?: string[];
     amenities?: string[];
-    photoUrls: string[];
+    photos: Photo[];
 };
 
 export type StayRecord = Stay & Entity;
