# stays-ui/src/models/User.ts
@@ -1,9 +1,18 @@
 import { Entity } from "./Entity";
 
-export enum Membership {
+export enum StayerMembership {
     Standard = "Standard",
     Premium = "Premium",
 };
+
+export enum HostMembersip {
+    None = "None",
+    Standard = "Standard",
+    Silver = "Silver",
+    Gold = "Gold",
+    Platinum = "Platinum"
+};
+
 
 export enum Role {
     Stayer = "Stayer",
@@ -15,8 +24,11 @@ export enum Role {
 export interface User {
     firstName: string;
     lastName: string;
+    enabled: boolean;
     email: string;
-    membership: Membership;
+    stayerMembership: StayerMembership;
+    hostMembership: HostMembersip; 
+    lastActive: number;
     roles: Role[];
 };
 
